feat: add header feature with responsive nav

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TBC x USAID</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="query.css" />
   </head>
   <body>
-    <h1>TBC</h1>
+    <header class="main-header" id="mainHeader">
+      <div class="container">
+        <nav class="navigation">
+          <a href="#" class="navigation__logo">
+            <img src="assets/tbc-academy-logo.svg" alt="TBC academy logo" />
+          </a>
+          <ul class="navigation__list" id="mainNav">
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">მთავარი</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">TBC IT</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link active">TBC x USAID</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">რისკები</a>
+            </li>
+          </ul>
+          <button class="navigation__menu-btn" id="menuBtn">Menu</button>
+        </nav>
+      </div>
+    </header>
+
+    <script src="index.js" defer></script>
   </body>
 </html>
