feat: add hero section with title desc feature

--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
       </div>
     </header>
 
+    <main>
+      <section class="hero">
+        <div class="container">
+          <!-- <div class="hero__desc"> გასასწორებელი მაქვს !!!!!!!!
+            <h1>TBC x USAID</h1>
+            <h2>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h2>
+          </div> -->
+        </div>
+      </section>
+
+      <section class="hero-title">
+        <div class="container">
+          <p class="hero-title__subtitle">
+            „ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა საინფორმაციო
+            ტექნოლოგიებით დაინტერესებულ ადამიანებს გთავაზობთ სრულად დაფინანსებულ
+            ონლაინ საგანმანათლებლო პრაქტიკულ კურსებს სხვადასხვა ICT
+            მიმართულებით. წარმატებულ კურსდამთავრებულებს ეძლევათ შესაძლებლობა
+            დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.
+          </p>
+          <p class="hero-title__more">გაიგე მეტი</p>
+        </div>
+      </section>
+    </main>
+
     <script src="index.js" defer></script>
   </body>
 </html>
