feat: add course cards feature

--- a/index.html
+++ b/index.html
@@ -55,8 +55,15 @@
           <p class="hero-title__more">გაიგე მეტი</p>
         </div>
       </section>
+
+      <section class="courses">
+        <div class="container">
+          <h1 class="courses__title">სასწავლო კურსები</h1>
+          <div class="cards" id="card-container"></div>
+        </div>
+      </section>
     </main>
 
-    <script src="index.js" defer></script>
+    <script src="index.js" type="module" defer></script>
   </body>
 </html>
