feat: add faq section with show/hide questions feature

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>TBC x USAID</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="query.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
   </head>
   <body>
     <header class="main-header" id="mainHeader">
@@ -63,6 +67,87 @@
         </div>
       </section>
     </main>
+
+    <section class="partniors">
+      <div class="container">
+        <h1>პროექტის პარტნიორები</h1>
+        <img
+          src="https://static.wixstatic.com/media/93e8a3_a356bb7d201f4f47870683655e9e4120~mv2.png/v1/fill/w_308,h_93,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Asset%204_2x_edited.png"
+          alt="xx"
+        />
+      </div>
+    </section>
+
+    <section class="faq">
+      <div class="container">
+        <div class="faq__headlines">
+          <h1>ხშირად დასმული კითხვები</h1>
+          <h2>ყველა კითხვა</h2>
+        </div>
+        <div class="faq__question">
+          <button>
+            <span>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</span>
+            <i class="fas fa-chevron-down d-arrow"></i>
+          </button>
+          <p>
+            <span>კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:</span>
+            <br />
+            <br />
+            I ეტაპი - პირველ ეტაპზე საჭიროა, შეავსო სასურველი კურსისთვის
+            განკუთვნილი სარეგისტრაციო ფორმა, რომელიც განთავსებულია კურსის შიდა
+            გვერდზე. კურსზე რეგისტრაციის დასრულების შემდეგ დაიწყება შემოსული
+            განცხადებების გადარჩევა.<br />
+            <br />
+            II ეტაპი - შერჩევის მეორე ეტაპი კურსების მიხედვით განსხვავებულია,
+            ზოგიერთი კურსისთვის მოიცავს პრე-ტესტს, ზოგიერთ კურსზე კი უნარების
+            ტესტს, სადაც მინიმალური ზღვარის გადალახვის შემთხვევაში გადახვალ
+            შერჩევის შემდეგ ეტაპზე. <br />
+            <br />
+            III ეტაპი - მესამე ეტაპი კურსების მიხედვით განსხვავდება: Advance
+            კურსებზე, სადაც მოითხოვება გარკვეული ტექნიკური ცოდნა, მონაწილეებმა
+            უნდა დაწერონ ტექნიკური ტესტი ცოდნის დონის შესამოწმებლად, ხოლო
+            კურსებზე, სადაც რაიმე ტიპის წინასწარი ცოდნა მოთხოვნილი არ არის უნდა
+            შეასრულოთ ტექნიკური დავალება, რაც თქვენი კვლევისა და თვითსწავლის
+            უნარს ამოწმებს. <br />
+            <br />
+            IV ეტაპი - შერჩევის ბოლო მეოთხე ეტაპი მოიცავს გასაუბრებას შესარჩევ
+            კომისიასთან. გასაუბრების წარმატებით გავლის შემთხვევაში ჩაირიცხებით
+            კურსზე და გაფორმდება შესაბამისი ხელშეკრულება.
+            <br />
+            <br />
+            <span
+              >* სანამ კურსზე დარეგისტრირდები მნიშვნელოვანია, ყურადღებით
+              წაიკითხო კურსის აღწერა, ნახო რას ისწავლი კურსის განმავლობაში და
+              გაიგო გააჩნია თუ არა კურსს დასწრების წინაპირობა.</span
+            >
+          </p>
+        </div>
+
+        <div class="faq__question">
+          <button>
+            <span>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</span>
+            <i class="fas fa-chevron-down d-arrow"></i>
+          </button>
+          <p>
+            TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ კანდიდატს
+            აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. გარდა Information
+            Security და Python კურსებისა, სადაც Basic დონის გავლის შემდეგ
+            შესაძლებელია სწავლის გაგრძელება Advance დონეზე.
+          </p>
+        </div>
+
+        <div class="faq__question">
+          <button>
+            <span>რა ღირს სწავლა პროგრამის ფარგლებში?</span>
+            <i class="fas fa-chevron-down d-arrow"></i>
+          </button>
+          <p>
+            პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი
+            ბანკისა და USAID-ის მიერ.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <script src="index.js" type="module" defer></script>
   </body>
