fix : change fonts and href properties for fix bugs

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <main>
       <section class="hero">
         <div class="container">
-          <!-- <div class="hero__desc"> გასასწორებელი მაქვს !!!!!!!!
+          <div class="hero__desc">
             <h1>TBC x USAID</h1>
             <h2>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h2>
-          </div> -->
+          </div>
         </div>
       </section>
 
