--- a/index.html
+++ b/index.html
@@ -66,88 +66,134 @@
           <div class="cards" id="card-container"></div>
         </div>
       </section>
+
+      <section class="partniors">
+        <div class="container">
+          <h1>პროექტის პარტნიორები</h1>
+          <img
+            src="https://static.wixstatic.com/media/93e8a3_a356bb7d201f4f47870683655e9e4120~mv2.png/v1/fill/w_308,h_93,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Asset%204_2x_edited.png"
+            alt="xx"
+          />
+        </div>
+      </section>
+
+      <section class="faq">
+        <div class="container">
+          <div class="faq__headlines">
+            <h1>ხშირად დასმული კითხვები</h1>
+            <h2>ყველა კითხვა</h2>
+          </div>
+          <div class="faq__question">
+            <button>
+              <span>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</span>
+              <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>
+              <span>კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:</span>
+              <br />
+              <br />
+              I ეტაპი - პირველ ეტაპზე საჭიროა, შეავსო სასურველი კურსისთვის
+              განკუთვნილი სარეგისტრაციო ფორმა, რომელიც განთავსებულია კურსის შიდა
+              გვერდზე. კურსზე რეგისტრაციის დასრულების შემდეგ დაიწყება შემოსული
+              განცხადებების გადარჩევა.<br />
+              <br />
+              II ეტაპი - შერჩევის მეორე ეტაპი კურსების მიხედვით განსხვავებულია,
+              ზოგიერთი კურსისთვის მოიცავს პრე-ტესტს, ზოგიერთ კურსზე კი უნარების
+              ტესტს, სადაც მინიმალური ზღვარის გადალახვის შემთხვევაში გადახვალ
+              შერჩევის შემდეგ ეტაპზე. <br />
+              <br />
+              III ეტაპი - მესამე ეტაპი კურსების მიხედვით განსხვავდება: Advance
+              კურსებზე, სადაც მოითხოვება გარკვეული ტექნიკური ცოდნა, მონაწილეებმა
+              უნდა დაწერონ ტექნიკური ტესტი ცოდნის დონის შესამოწმებლად, ხოლო
+              კურსებზე, სადაც რაიმე ტიპის წინასწარი ცოდნა მოთხოვნილი არ არის
+              უნდა შეასრულოთ ტექნიკური დავალება, რაც თქვენი კვლევისა და
+              თვითსწავლის უნარს ამოწმებს. <br />
+              <br />
+              IV ეტაპი - შერჩევის ბოლო მეოთხე ეტაპი მოიცავს გასაუბრებას შესარჩევ
+              კომისიასთან. გასაუბრების წარმატებით გავლის შემთხვევაში ჩაირიცხებით
+              კურსზე და გაფორმდება შესაბამისი ხელშეკრულება.
+              <br />
+              <br />
+              <span
+                >* სანამ კურსზე დარეგისტრირდები მნიშვნელოვანია, ყურადღებით
+                წაიკითხო კურსის აღწერა, ნახო რას ისწავლი კურსის განმავლობაში და
+                გაიგო გააჩნია თუ არა კურსს დასწრების წინაპირობა.</span
+              >
+            </p>
+          </div>
+
+          <div class="faq__question">
+            <button>
+              <span>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</span>
+              <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>
+              TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ
+              კანდიდატს აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. გარდა
+              Information Security და Python კურსებისა, სადაც Basic დონის გავლის
+              შემდეგ შესაძლებელია სწავლის გაგრძელება Advance დონეზე.
+            </p>
+          </div>
+
+          <div class="faq__question">
+            <button>
+              <span>რა ღირს სწავლა პროგრამის ფარგლებში?</span>
+              <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>
+              პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი
+              ბანკისა და USAID-ის მიერ.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <section class="partniors">
-      <div class="container">
-        <h1>პროექტის პარტნიორები</h1>
-        <img
-          src="https://static.wixstatic.com/media/93e8a3_a356bb7d201f4f47870683655e9e4120~mv2.png/v1/fill/w_308,h_93,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Asset%204_2x_edited.png"
-          alt="xx"
-        />
-      </div>
-    </section>
-
-    <section class="faq">
-      <div class="container">
-        <div class="faq__headlines">
-          <h1>ხშირად დასმული კითხვები</h1>
-          <h2>ყველა კითხვა</h2>
+    <footer class="footer">
+      <section class="footer__section">
+        <div class="container">
+          <div class="footer__container">
+            <div class="footer__logos">
+              <div class="footer__tbc-logo-container">
+                <img
+                  src="assets/tbcfooter.webp"
+                  alt="TBC logo"
+                  class="footer__tbc-logo"
+                />
+              </div>
+              <div class="footer__social-links-container">
+                <a href="https://www.facebook.com/tbcbank/" target="_blank">
+                  <img
+                    src="assets/facebook.webp"
+                    alt="Facebook logo"
+                    class="footer__social-links"
+                  />
+                </a>
+                <a
+                  href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ"
+                  target="_blank"
+                >
+                  <img
+                    src="assets/youtube.webp"
+                    alt="Youtube logo"
+                    class="footer__social-links"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="footer__rights-reserved-container">
+              <p class="footer__all-rights-reserved">
+                © 2023 ყველა უფლება დაცულია
+              </p>
+            </div>
+            <div class="footer__terms-and-conditions-container">
+              <p class="footer__terms-and-conditions">წესები და პირობები</p>
+              <button class="footer__contact-btn">მოგვწერეთ</button>
+            </div>
+          </div>
         </div>
-        <div class="faq__question">
-          <button>
-            <span>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</span>
-            <i class="fas fa-chevron-down d-arrow"></i>
-          </button>
-          <p>
-            <span>კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:</span>
-            <br />
-            <br />
-            I ეტაპი - პირველ ეტაპზე საჭიროა, შეავსო სასურველი კურსისთვის
-            განკუთვნილი სარეგისტრაციო ფორმა, რომელიც განთავსებულია კურსის შიდა
-            გვერდზე. კურსზე რეგისტრაციის დასრულების შემდეგ დაიწყება შემოსული
-            განცხადებების გადარჩევა.<br />
-            <br />
-            II ეტაპი - შერჩევის მეორე ეტაპი კურსების მიხედვით განსხვავებულია,
-            ზოგიერთი კურსისთვის მოიცავს პრე-ტესტს, ზოგიერთ კურსზე კი უნარების
-            ტესტს, სადაც მინიმალური ზღვარის გადალახვის შემთხვევაში გადახვალ
-            შერჩევის შემდეგ ეტაპზე. <br />
-            <br />
-            III ეტაპი - მესამე ეტაპი კურსების მიხედვით განსხვავდება: Advance
-            კურსებზე, სადაც მოითხოვება გარკვეული ტექნიკური ცოდნა, მონაწილეებმა
-            უნდა დაწერონ ტექნიკური ტესტი ცოდნის დონის შესამოწმებლად, ხოლო
-            კურსებზე, სადაც რაიმე ტიპის წინასწარი ცოდნა მოთხოვნილი არ არის უნდა
-            შეასრულოთ ტექნიკური დავალება, რაც თქვენი კვლევისა და თვითსწავლის
-            უნარს ამოწმებს. <br />
-            <br />
-            IV ეტაპი - შერჩევის ბოლო მეოთხე ეტაპი მოიცავს გასაუბრებას შესარჩევ
-            კომისიასთან. გასაუბრების წარმატებით გავლის შემთხვევაში ჩაირიცხებით
-            კურსზე და გაფორმდება შესაბამისი ხელშეკრულება.
-            <br />
-            <br />
-            <span
-              >* სანამ კურსზე დარეგისტრირდები მნიშვნელოვანია, ყურადღებით
-              წაიკითხო კურსის აღწერა, ნახო რას ისწავლი კურსის განმავლობაში და
-              გაიგო გააჩნია თუ არა კურსს დასწრების წინაპირობა.</span
-            >
-          </p>
-        </div>
-
-        <div class="faq__question">
-          <button>
-            <span>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</span>
-            <i class="fas fa-chevron-down d-arrow"></i>
-          </button>
-          <p>
-            TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ კანდიდატს
-            აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. გარდა Information
-            Security და Python კურსებისა, სადაც Basic დონის გავლის შემდეგ
-            შესაძლებელია სწავლის გაგრძელება Advance დონეზე.
-          </p>
-        </div>
-
-        <div class="faq__question">
-          <button>
-            <span>რა ღირს სწავლა პროგრამის ფარგლებში?</span>
-            <i class="fas fa-chevron-down d-arrow"></i>
-          </button>
-          <p>
-            პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი
-            ბანკისა და USAID-ის მიერ.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
+    </footer>
 
     <script src="index.js" type="module" defer></script>
   </body>
