--- a/index.html
+++ b/index.html
@@ -70,10 +70,21 @@
       <section class="partniors">
         <div class="container">
           <h1>პროექტის პარტნიორები</h1>
-          <img
-            src="https://static.wixstatic.com/media/93e8a3_a356bb7d201f4f47870683655e9e4120~mv2.png/v1/fill/w_308,h_93,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Asset%204_2x_edited.png"
-            alt="xx"
-          />
+          <div>
+            <img src="./assets/usaid.webp" alt="usaid" />
+            <img src="./assets/space.webp" alt="space" />
+            <img src="./assets/tianet.webp" alt="tianet" />
+          </div>
+
+          <div>
+            <img src="./assets/tegeta.webp" alt="tegeta" />
+            <img src="./assets/spectre.webp" alt="spectre" />
+            <img src="./assets/tbc-lising.webp" alt="lizing" />
+          </div>
+
+          <div>
+            <img src="./assets/ufc.webp" alt="ufc" />
+          </div>
         </div>
       </section>
 
