--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TBC x USAID</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="query.css" />
+    <!-- <link rel="icon" href="./assets/favicon.png" type="image/png" /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -70,21 +71,60 @@
       <section class="partniors">
         <div class="container">
           <h1>პროექტის პარტნიორები</h1>
-          <div>
-            <img src="./assets/usaid.webp" alt="usaid" />
-            <img src="./assets/space.webp" alt="space" />
-            <img src="./assets/tianet.webp" alt="tianet" />
+          <button class="partniors__btn partniors__left" id="left-arrow">
+            <img src="./assets/leftarrow.svg" alt="left icon" />
+          </button>
+          <div class="partniors__items">
+            <img
+              class=".partniors__items__img"
+              src="./assets/usaid.webp"
+              alt="usaid"
+            />
+            <img
+              class=".partniors__items__img"
+              src="./assets/space.webp"
+              alt="space"
+            />
+            <img
+              class=".partniors__items__img"
+              src="./assets/tianet.webp"
+              alt="tianet"
+            />
           </div>
 
-          <div>
-            <img src="./assets/tegeta.webp" alt="tegeta" />
-            <img src="./assets/spectre.webp" alt="spectre" />
-            <img src="./assets/tbc-lising.webp" alt="lizing" />
+          <div class="partniors__items">
+            <img
+              class=".partniors__items__img"
+              src="./assets/tegeta.webp"
+              alt="tegeta"
+            />
+            <img
+              class=".partniors__items__img"
+              src="./assets/spectre.webp"
+              alt="spectre"
+            />
+            <img
+              class=".partniors__items__img"
+              src="./assets/tbc-lising.webp"
+              alt="lizing"
+            />
           </div>
 
-          <div>
-            <img src="./assets/ufc.webp" alt="ufc" />
+          <div class="parniors__alone">
+            <img
+              class=".partniors__items__img"
+              src="./assets/ufc.webp"
+              alt="ufc"
+            />
           </div>
+
+          <button class="partniors__btn partniors__right" id="right-arrow">
+            <img
+              class=".partniors__items__img"
+              src="./assets/ringtarrow.svg"
+              alt="right icon"
+            />
+          </button>
         </div>
       </section>
 
