feat: add burger and x icons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
               <a href="#" class="navigation__link">რისკები</a>
             </li>
           </ul>
-          <button class="navigation__menu-btn" id="menuBtn">Menu</button>
+          <button class="navigation__menu-btn" id="menuBtn">
+            <i class="fas fa-bars white-icon large-icon"></i>
+          </button>
         </nav>
       </div>
     </header>
