fix: change partniors css for fix layout bug

--- a/index.html
+++ b/index.html
@@ -72,23 +72,23 @@
 
       <section class="partniors">
         <div class="container">
-          <h1>პროექტის პარტნიორები</h1>
+          <h1 class="partniors__head">პროექტის პარტნიორები</h1>
           <button class="partniors__btn partniors__left" id="left-arrow">
             <img src="./assets/leftarrow.svg" alt="left icon" />
           </button>
           <div class="partniors__items">
             <img
-              class=".partniors__items__img"
+              class="partniors__items__img"
               src="./assets/usaid.webp"
               alt="usaid"
             />
             <img
-              class=".partniors__items__img"
+              class="partniors__items__img"
               src="./assets/space.webp"
               alt="space"
             />
             <img
-              class=".partniors__items__img"
+              class="partniors__items__img"
               src="./assets/tianet.webp"
               alt="tianet"
             />
@@ -96,25 +96,25 @@
 
           <div class="partniors__items">
             <img
-              class=".partniors__items__img"
+              class="partniors__items__img"
               src="./assets/tegeta.webp"
               alt="tegeta"
             />
             <img
-              class=".partniors__items__img"
+              class="partniors__items__img"
               src="./assets/spectre.webp"
               alt="spectre"
             />
             <img
-              class=".partniors__items__img"
+              class="partniors__items__img"
               src="./assets/tbc-lising.webp"
               alt="lizing"
             />
           </div>
 
-          <div class="parniors__alone">
+          <div class="partniors__alone">
             <img
-              class=".partniors__items__img"
+              class="partniors__items__img"
               src="./assets/ufc.webp"
               alt="ufc"
             />
