feat: add footer responsive css

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <section class="hero">
         <div class="container">
           <div class="hero__desc">
-            <h1>TBC x USAID</h1>
-            <h2>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h2>
+            <h class="hero__desc__title">TBC x USAID</h>
+            <h2 class="hero__desc__subtitle">ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h2>
           </div>
         </div>
       </section>
