--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TBC x USAID</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="query.css" />
-    <!-- <link rel="icon" href="./assets/favicon.png" type="image/png" /> -->
+    <link rel="icon" href="./assets/favicon.png" type="image/png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
