--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
               <a href="#" class="navigation__link">რისკები</a>
             </li>
           </ul>
-          <button class="navigation__menu-btn" id="menuBtn">
-            <i class="fas fa-bars white-icon large-icon"></i>
-          </button>
+          <div class="mobile_burger" id="burger">
+            <div>
+              <span class="line-1"></span>
+              <span class="line-2"></span>
+              <span class="line-3"></span>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
